fix: button hover styles on mobile

--- a/style.css
+++ b/style.css
@@ -1442,12 +1442,10 @@ button {
   }
   .button:hover,
   .button:focus-visible {
-    background-color: var(--purple-shade);
-    box-shadow: 0px 0px 0 0 var(--purple-shade);
+    background-color: var(--accent-color);
   }
   .button.dark:hover {
-    background-color: var(--purple-shade-dk);
-    box-shadow: 0px 0px 0 0 var(--purple-shade-dk);
+    background-color: var(--accent-color-dk);
   }
   .container {
     width: min(100% - 32px);
